<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>testing_web</groupId>
    <artifactId>testing_web</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <properties>
        <failsafe.fork.count>1</failsafe.fork.count>
        <java.version>1.8</java.version>
        <maven.build.timestamp.format>yyyy-MM-dd-HHmm</maven.build.timestamp.format>
        <maven-download-plugin.version>1.3.0</maven-download-plugin.version>

        <encoding>UTF-8</encoding>
        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
        <project.resources.sourceEncoding>${encoding}</project.resources.sourceEncoding>
        <archetype.encoding>${encoding}</archetype.encoding>

        <cucumber.version>1.2.5</cucumber.version>
        <selenium.version>3.8.1</selenium.version>

        <web.chrome.webDriver>drivers\\web\\chromedriver.exe</web.chrome.webDriver>
        <chromedriver-dep.version>2.33</chromedriver-dep.version>

    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- disables unit tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

            <!-- integration tests i.e. cucumber tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <forkCount>${failsafe.fork.count}</forkCount>
                    <reuseForks>false</reuseForks>
                    <includes>
                        <include>${classes}</include>
                    </includes>
                    <runOrder>alphabetical</runOrder>
                    <argLine>-Duser.language=en</argLine>
                    <argLine>-Xmx512m</argLine>
                    <argLine>-XX:MaxPermSize=256m</argLine>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                    <systemPropertyVariables>
                        <project.dir>${basedir}</project.dir>
                    </systemPropertyVariables>
                </configuration>
                <executions>
                    <execution>
                        <id>failsafe-integration-test</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Cucumber parallel plugin -->
            <plugin>
                <groupId>com.github.temyers</groupId>
                <artifactId>cucumber-jvm-parallel-plugin</artifactId>
                <version>2.2.0</version>
                <executions>
                    <execution>
                        <id>generateRunners</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>generateRunners</goal>
                        </goals>
                        <configuration>
                            <glue>testing_web</glue>
                            <outputDirectory>${project.build.directory}/generated-test-sources/cucumber</outputDirectory>
                            <featuresDirectory>src/test/resources/features/</featuresDirectory>
                            <cucumberOutputDir>target/cucumber-reports</cucumberOutputDir>
                            <format>json</format>
                            <filterFeaturesByTags>true</filterFeaturesByTags>
                            <namingScheme>pattern</namingScheme>
                            <parallelScheme>SCENARIO</parallelScheme>
                            <namingPattern>{f}IT</namingPattern>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.googlecode.maven-download-plugin</groupId>
                <artifactId>download-maven-plugin</artifactId>
                <version>${maven-download-plugin.version}</version>
                <executions>
                    <!-- download chrome webDriver, new versions see on http://chromedriver.storage.googleapis.com/-->
                    <execution>
                        <id>install-chrome-webDriver-linux64</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>wget</goal>
                        </goals>
                        <configuration>
                            <url>
                                https://chromedriver.storage.googleapis.com/${chromedriver-dep.version}/chromedriver_linux64.zip
                            </url>
                            <unpack>true</unpack>
                            <outputDirectory>${basedir}/drivers/linux/64bit/</outputDirectory>
                            <md5>6dc329fb8ecdff6a9f74eea053434662</md5>
                        </configuration>
                    </execution>
                    <execution>
                        <id>install-chrome-webDriver-windows</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>wget</goal>
                        </goals>
                        <configuration>
                            <url>
                                https://chromedriver.storage.googleapis.com/${chromedriver-dep.version}/chromedriver_win32.zip
                            </url>
                            <unpack>true</unpack>
                            <outputDirectory>${basedir}/drivers/windows/</outputDirectory>
                            <md5>718df64a6e2b2efde50b26ac22fde229</md5>
                        </configuration>
                    </execution>
                    <execution>
                        <id>install-chrome-webDriver-osx</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>wget</goal>
                        </goals>
                        <configuration>
                            <url>
                                https://chromedriver.storage.googleapis.com/${chromedriver-dep.version}/chromedriver_mac64.zip
                            </url>
                            <unpack>true</unpack>
                            <outputDirectory>${basedir}/drivers/osx/</outputDirectory>
                            <md5>3d520b8ede8e9deb8c9a2efe2aec5f35</md5>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codeborne</groupId>
            <artifactId>phantomjsdriver</artifactId>
            <version>1.4.3</version>
        </dependency>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>4.1.0</version>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-guice</artifactId>
            <version>${cucumber.version}</version>
        </dependency>


        <!-- test dependencies -->
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>net.masterthought</groupId>
            <artifactId>maven-cucumber-reporting</artifactId>
            <version>3.12.0</version>
        </dependency>

    </dependencies>

    <profiles>
        <profile>
            <id>serial</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <failsafe.fork.count>1</failsafe.fork.count>
                <classes>**/AllTests.java</classes>
            </properties>
        </profile>
        <profile>
            <id>parallel</id>
            <properties>
                <failsafe.fork.count>4</failsafe.fork.count>
                <classes>**/*IT.java</classes>
            </properties>
        </profile>
    </profiles>

</project>